Modify project name and description
1) WHY are these changes necessary?
----------------------------------------------------

Modify project  name and description

2) WHAT are these changes?
----------------------------------------------------

Modify name and description in manifest.json and package.json file

3) WHAT are related SIM, TT, and/or MCM (if exist)?
----------------------------------------------------

https://github.com/LeoLuo0115/LeetTracker

4) HOW were these changes tested?
----------------------------------------------------

Deployed to dev account

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "chrome-extension-typescript-starter",
+  "name": "leetcode-tracker",
   "version": "1.0.0",
-  "description": "chrome-extension-typescript-starter",
+  "description": "Track your LeetCode progress and review it using forgetting curve algorithm",
   "main": "index.js",
   "scripts": {
     "watch": "webpack --config webpack/webpack.dev.js --watch",
@@ -10,11 +10,11 @@
     "test": "npx jest",
     "style": "prettier --write \"src/**/*.{ts,tsx}\""
   },
-  "author": "",
+  "author": "Leo",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/chibat/chrome-extension-typescript-starter.git"
+    "url": "https://github.com/LeoLuo0115/LeetTracker"
   },
   "dependencies": {
     "react": "^18.2.0",
