Refactor options page error handling

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -30,7 +30,8 @@
     "webRequest",
     "alarms",
     "notifications",
-    "webNavigation"
+    "webNavigation",
+    "tabs"
   ],
 
   "host_permissions": [
