Create supporting files for background script
1) WHY are these changes necessary?
----------------------------------------------------

- Create supporting files for background script
- Make sure understand how debounce function work
- Implemented  `getCurrentTab`  function (the `currentWindow` or other filed does not work)

2) WHAT are these changes?
----------------------------------------------------

- Implemented a `getCurrentTab` function that accurately retrieves the active tab using a combination of the `active` and `highlighted` properties.
- Removed unnecessary query options like `currentWindow` that do not function as expected.
- Focus on refining the background script to ensure all necessary components are in place before addressing the core problem logic. The following files have been created to support our background script.

```tsx
├── lib
│   ├── background-api.ts
│   ├── background-utils.ts
│   ├── problem-manager.ts
```

3) WHAT are related problem (if exist)?
----------------------------------------------------

We will start implement the problem submission logic

4) HOW were these changes tested?
----------------------------------------------------

Deployed to dev account

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -26,18 +26,20 @@
 
   "permissions": [
     "storage",
+    "tabs",
     "activeTab",
     "webRequest",
     "alarms",
     "notifications",
-    "webNavigation",
-    "tabs"
+    "webNavigation"
   ],
 
   "host_permissions": [
-    "*://*.leetcode.com/*"
+    "*://*.leetcode.com/*",
+    "http://*/*",
+    "https://*/*"
   ],
-  
+
   "content_scripts": [
     {
         "matches": ["https://leetcode.com/problems/*"],
