Implement Submit Logic, Sync Data, and Fix Problem Status
1) WHY are these changes necessary?
----------------------------------------------------

To implement the submit functionality, sync forgetting curve data to local storage, and fix an issue with retrieving problem statuses.

2) WHAT are these changes?
----------------------------------------------------

- Implemented submit logic
- Synced forgettingCurve data to local storage
- Fixed `getProblemStatus` case

3) WHAT are related problem (if exist)?
----------------------------------------------------

All logic needs testing and should work on the popup page.

4) HOW were these changes tested?
----------------------------------------------------

Deployed to dev account

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -35,9 +35,7 @@
   ],
 
   "host_permissions": [
-    "*://*.leetcode.com/*",
-    "http://*/*",
-    "https://*/*"
+    "*://*.leetcode.com/*"
   ],
 
   "content_scripts": [
