--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-toastify": "^10.0.5",
+    "react-virtualized-auto-sizer": "^1.0.24",
+    "react-window": "^1.8.10",
+    "react-window-infinite-loader": "^1.0.9",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -35,6 +38,7 @@
     "@types/jest": "^29.5.0",
     "@types/react": "^18.0.29",
     "@types/react-dom": "^18.0.11",
+    "@types/react-window": "^1.8.8",
     "autoprefixer": "^10.4.20",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^7.1.2",
